BZ-10365 make sure our buttons wrap (#56)
* BZ-10365 make sure our buttons wrap

* BZ-10365 move margin to end of button instead of beginning

* BZ-10365 use gap instead of margin

* BZ-10365 updates based on code review

* BZ-10365 use gap consistently instead of margin

* BZ-10365 use gap to set space between elements

* BZ-10365 add margin top only

* BZ-10365 undo CI change added for testing

--- a/src/app/third-iron-module/third-iron-buttons/third-iron-buttons.component.scss
+++ b/src/app/third-iron-module/third-iron-buttons/third-iron-buttons.component.scss
@@ -6,21 +6,22 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-
-  .ti-browzine-button-with-stack {
-    margin-left: 10px;
-  }
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-top: 5px;
 }
 
 .ti-no-stack-container {
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-top: 5px;
 }
 
 .ti-consolidated-coverage {
   font-size: 0.875rem;
   color: var(--sys-primary);
   font-weight: 400;
-  margin-left: 0.5rem;
 }
